--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,11 @@
 }
 
 .box {
-  height: 10px;
-  width: 10px;
   border: 0.001px solid black;
+}
+
+#container {
+  height: 500px;
+  width: 500px;
+  text-align: center;
 }
